--- a/org.eclipselabs.plugindependencies.core/OSGI-INF/l10n/bundle.properties
+++ b/org.eclipselabs.plugindependencies.core/OSGI-INF/l10n/bundle.properties
@@ -1,2 +1,2 @@
-#Properties file for Plugin_dependencies
-Bundle-Name = Plugin_Dependencies
+Bundle-Name = Plug-in Dependencies Core
+Vendor = Andrey Loskutov
