--- a/org.eclipselabs.plugindependencies.ui/OSGI-INF/l10n/bundle.properties
+++ b/org.eclipselabs.plugindependencies.ui/OSGI-INF/l10n/bundle.properties
@@ -1,3 +1,3 @@
-#Properties file for PluginDependencyView
 view.name = Plug-in Explorer
-Bundle-Name =Plug-in Dependencies Explorer
+Bundle-Name = Plug-in Dependencies Explorer
+Vendor = Andrey Loskutov
